# proyecto-telematica

./: .gitignore  .gitignore.save  ARCHITECTURE_SUMMARY.md  DNS_CONFIG_SUMMARY.md  MISSING.md  QUICKSTART.md  README.md  STATUS.md  database.db  diagnose.sh  requirements.txt  run_all.sh  setup_dns.sh
Login_service/: ID_handler.cpp  ID_handler.h  ID_verificator.cpp  ID_verificator.h  Request_Handler.cpp  Token_verificator.cpp  Token_verificator.h  User_operations.cpp  User_operations.h  db_manager.cpp  db_manager.h  log  login_service  makefile
NewClient/: client.py
NewSensor/: Sensor_Client.cpp  sensor_client
NewServer/: Log.cpp  Log.h  Login_connection.cpp  Login_connection.h  PendingAlerts.cpp  PendingAlerts.h  SensorDBManager.cpp  SensorDBManager.h  SensorUtilities.cpp  SensorUtilities.h  Sensor_entry.cpp  Sensor_entry.h  UserUtilities.cpp  UserUtilities.h  User_entry.cpp  User_entry.h  alertDB.cpp  alertDB.h  main.cpp  makefile  sensor_system  test_client  test_client.cpp
clients/operator_client/: operator_client.py  operator_gui.py  requirements.txt
clients/sensor_simulator/: QUICKSTART.md  README.md  run_sensors.py  sensor_base.py  sensor_energy.py  sensor_humidity.py  sensor_pressure.py  sensor_temperature.py  sensor_vibration.py  test_sensor.py
clients/simulator/: sensor_simulator.py
deployment/: aws_setup.sh
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: deploy.sh  start_login.sh  start_server.sh
docs/: API.md  DNS_SETUP.md  PROJECT_INDEX.md  architecture.md  deployment.md  protocol.md  schema.sql  seed.sql
logs/: logs.txt
operator/: operator_client.py
sensors/: sensor_vibration.py
server/: CMakeLists.txt  Makefile  server  server.cpp
